--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -2,12 +2,12 @@
   "name": "TheDailyDadJoke",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/tddj-favicon.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "/icon.png",
+      "src": "/tddj-favicon.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
